<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/email_connect_common"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="50dp"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_oapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:text="@string/app_title_short"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/oapp_secondary_text"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:hint="@string/username_placeholder_text"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/et_password"
        android:singleLine="true"
        android:textColorHint="@color/emailHintGrey"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/password_placeholder_text"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="@color/emailHintGrey"/>

</LinearLayout>