...
                  android:padding="15dp" >

        <include
            layout="@layout/email_connect_common"/>

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/confirm_password_placeholder_text"
...
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/email_cancel"/>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
...
