...
    <!-- Parse strings -->
    <string name="parse_service_url">http://10.8.159.145:23743/parse</string>
    <string name="parse_application_id">OAPP</string>
    <string name="option_placeholder_test">Select Option</string>
    <string name="unsuccessful_oapp_sign_up_message">User account has already been created.</string>
    <string name="successful_oapp_sign_up_message">User was signed up successfully.</string>
    <string name="sign_up_required_fields_message">Please enter required fields.</string>
    <string name="sign_up_passwordconfirm_error_message">Password and Confirm Password fields do not match.</string>
    <string name="parse_test_username">testuser1@gmail.com</string>
    <string name="parse_test_user_password">testuser1</string>

    <!-- Image Base URLS -->
    <string name="cdn_img_base_url">http://ak1.ostkcdn.com/images/products/</string>

...
