...
            android:elevation="@dimen/button_elevation"
            android:text="@string/google_connect"
            android:textColor="@android:color/background_light"
            android:typeface="normal" />

        <Button
            android:id="@+id/email_login_btn"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/emailLoginWhite"
            android:contentDescription="@string/email_connect"
            android:elevation="@dimen/button_elevation"
...
