<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/brand_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BrandActivity"
    android:orientation="vertical">
</RelativeLayout>
